<resources>
    <string name="app_name">diceRoller</string>
    <string name="text_view1">-</string>
    <string name="btn_rolldice">Roll all dice</string>
    <string name="btn_removeDice">-</string>
    <string name="btn_addDice">+</string>
    <string name="diceCounter">1</string>
    <string name="Btnreset">Reset</string>
    <string name="rollnextdice">Roll Next Dice</string>
    <string name="nextActivitybtn">Results</string>
    <string name="test">Resuts</string>
    <string name="delete">Delete</string>
    <string name="camera">camera</string>
    <string name="pic">picture</string>
    <string name="gal">galery</string>
    <string name="map">Maps</string>
    <string name="title_activity_maps">maps</string>

</resources>