<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/numberinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:onClick="btnSetClicked"
        android:text="@string/btn_rolldice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDice" />

    <Button
        android:id="@+id/addDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnAddDice"
        android:text="@string/btn_addDice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/RemoveDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="btnRemoveDice"
        android:text="@string/btn_removeDice"
        app:layout_constraintStart_toEndOf="@+id/addDice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/diceCounter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/diceCounter"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@+id/RemoveDice"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rollnextdice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:onClick="rollnextdice"
        android:text="@string/rollnextdice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RemoveDice" />

    <ImageView
        android:id="@+id/emptydice"
        android:layout_width="125dp"
        android:layout_height="150dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberinput"
        app:srcCompat="@drawable/emptydice" />

    <ImageView
        android:id="@+id/emptydice2"
        android:layout_width="125dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollnextdice"
        app:srcCompat="@drawable/emptydice" />

    <ImageView
        android:id="@+id/emptydice3"
        android:layout_width="125dp"
        android:layout_height="150dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emptydice"
        app:srcCompat="@drawable/emptydice" />

    <ImageView
        android:id="@+id/emptydice4"
        android:layout_width="125dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emptydice2"
        app:srcCompat="@drawable/emptydice" />

</androidx.constraintlayout.widget.ConstraintLayout>